manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82257400"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: 82257400
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yaml"]
          volumeMounts:
          - mountPath: /mnt/cloud-82257400
            name: 82257400-volume
            readOnly: false
            subPath: cloud-82257400
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: "82257400-volume"
        persistentVolumeClaim:
          claimName: ce-aa-pvc
      - name: application-properties
        configMap:
          name: "82257400-configmap"
          items:
            - key: application.yaml
              path: application.yaml
          defaultMode: 420
